# runtime_lto_examples

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/cmake/: RAPIDS.cmake  copy_fatbins.cmake  rapids_config.cmake
cpp/cmake/detail/: copy_fatbins.cmake
cpp/src/: cuda_wrapper.hpp  kernels.cu  load.cpp  main.cpp  main.cu
cpp/src/adv_kernel_launch/: CMakeLists.txt  adv_kernel_launches.cu  kernel_lookup.h  saxpy_setup.h
cpp/src/adv_kernel_launch/kernels/: grid_stride.h  grid_stride_PfPfPf.cu  max_compute_nvrtc.cu  min_compute_nvrtc.cu  saxpy_compute.h  saxpy_compute_ddd.cu  saxpy_compute_fff.cu  saxpy_compute_nvrtc.cu
cpp/src/common/: dump_names.cpp  grid_1d.hpp  launch.cpp  load.cpp
cpp/src/hello_world/: CMakeLists.txt  hello_world.cu  main.cpp
cpp/src/kernel_database/: AlgorithmLauncher.cu  AlgorithmLauncher.h  CMakeLists.txt  FragmentDatabase.cu  FragmentDatabase.h  FragmentEntry.cu  FragmentEntry.h  KernelPlanner.h  LaunchKernelDatabase.cu  LaunchKernelDatabase.h  LaunchKernelEntry.cu  LaunchKernelEntry.h  MakeFragmentKey.cu  MakeFragmentKey.h  NVRTCLTOFragmentCompiler.cu  NVRTCLTOFragmentCompiler.h  kernel_lookup.cpp  main.cu  notes
cpp/src/kernel_database/algorithms/: AlgorithmFragmentDatabase.cu  AlgorithmFragmentDatabase.h  AlgorithmLauncher.cu  AlgorithmLauncher.h  AlgorithmPlanner.cu  AlgorithmPlanner.h  CMakeLists.txt  ComputeFragmentEntry.cu  ComputeFragmentEntry.h  SaxpyPlanner.h  SumPlanner.h
cpp/src/kernel_database/algorithms/kernels/: saxpy_double.cu  saxpy_float.cu  sum.hpp  sum_int32.cu  sum_int64.cu
cpp/src/kernel_database/cmake/: embed_fatbins.cmake  embed_sources_for_nvrtc.cmake  generate_nvrtc_source.cmake  nvrtc_includes_as_cpp_file.cmake
cpp/src/kernel_database/detail/: RegisterComputeKernel.h  RegisterKernelFragment.h  RegisterLaunchKernel.h  RegisterNVRTCHeader.h
cpp/src/kernel_database/iteration_spaces/: CMakeLists.txt  LaunchTypes.h  grid_1d.hpp  grid_stride.h  grid_stride.hpp  grid_stride_3double.cu  grid_stride_3float.cu
cpp/src/kernel_database/kernels/: grid_1d.hpp  grid_stride.h  grid_stride_3double.cu  grid_stride_3float.cu
cpp/src/kernel_database/kernels/detail/: RegisterNVRTCHeader.h
cpp/src/mandlebrot/: CMakeLists.txt  mandlebrot_byhand.cu  mandlebrot_lto.cu  mandlebrot_rdc.cu  perf_results.md  run_mandlebrot_rdc.cu
cpp/src/mandlebrot/GL/: helper.h
cpp/src/mandlebrot/kernels/: mandlebrot_compute.cu  mandlebrot_grid_stride.cu
cpp/src/saxpy/: CMakeLists.txt  main.cpp  results.md  saxpy_byhand.cu  saxpy_lto.cu  saxpy_setup.h  saxpy_thrust.cu
cpp/src/saxpy/kernels/: saxpy_compute.cu  saxpy_compute_slow_1.cu  saxpy_compute_slow_2.cu  saxpy_grid_stride.cu  saxpy_shell.cu
